# DSGE_BSDE

./: -  .gitignore  .pre-commit-config.yaml  AGENTS.md  BSDE_10.aux  BSDE_10.dvi  BSDE_10.out  BSDE_10.toc  BSDE_12.aux  BSDE_12.fdb_latexmk  BSDE_12.fls  BSDE_12.out  BSDE_12.toc  BSDE_13.aux  BSDE_13.bcf  BSDE_13.blg  BSDE_13.fdb_latexmk  BSDE_13.fls  BSDE_13.run.xml  BSDE_13.toc  BSDE_21.aux  BSDE_21.fdb_latexmk  BSDE_21.fls  BSDE_21.pytxcode  BSDE_21.toc  CHANGELOG.md  CHANGELOG_TEMPLATE.md  CONTRIBUTING.md  LICENSE  Makefile  Model.ipynb  README.md  Try.md  _98A24B86763A8124F3FA4F137A26B6F8.data.minted  dvc.yaml  pyproject.toml  setup.cfg
.out/: BSDE_13.aux  BSDE_13.bbl  BSDE_13.blg  BSDE_13.fdb_latexmk  BSDE_13.fls  BSDE_13.toc
Marimo/: Book_01.py  Book_01_nb.py  Book_2.py  Config.txt
Tex/: BSDE_10.aux  BSDE_10.fdb_latexmk  BSDE_10.fls  BSDE_10.out  BSDE_10.tex  BSDE_10.tmp  BSDE_10.toc  BSDE_11.aux  BSDE_11.bcf  BSDE_11.fdb_latexmk  BSDE_11.fls  BSDE_11.tex  BSDE_11.toc  BSDE_12.tex  BSDE_13.aux  BSDE_13.blg  BSDE_13.fdb_latexmk  BSDE_13.fls  BSDE_13.run.xml  BSDE_13.tex  BSDE_13.toc  BSDE_13_full.tex  BSDE_20.tex  BSDE_21.aux  BSDE_21.tex  BSDE_21.toc  BSDE_6.tex  BSDE_7.tex  Model.tex  Prompt.html  Prompt.md  README.md  bsde_10.pytxmcr  build_bsde10.ps1  build_bsde10.sh  latexmkrc  pythontex_data.pkl  references.bib  refs.bib
bsde_dsgE/: __init__.py  cli.py
bsde_seed/: __init__.py
ci/: lint_test.yml
core/: grids.py  init.py  nets.py  outer_loop.py  solver.py
data/: .gitignore  dividend_draws.csv  dividend_draws.csv.dvc  probab01_table1.json
docs/: CHANGELOG.md  conf.py  index.md  online_research.md  replication_checklist.md  research_notes.md  training_guide.md
examples/: grid_search.py
kfac_pinn/: README.md  __init__.py  networks.py  optimizer.py  pde.py  solver.py  training.py
models/: ct_lucas.py  two_agent.py  two_tree.py
notebooks/: BSDE_01.ipynb  BSDE_02.ipynb  BSDE_03.ipynb  BSDE_04.ipynb  BSDE_MacroFinance_Aug2025.ipynb  hjb_fp_pinn_minimal_v17.ipynb  hjb_fp_pinn_minimal_v3.ipynb  hjb_fp_pinn_minimal_v6.ipynb  kfac_api_overview.ipynb  kfac_demo.ipynb  kfac_pinn_2d_poisson.ipynb  kfac_pinn_dirichlet_neumann.ipynb  kfac_pinn_example.ipynb  kfac_pinn_pkg_intro.ipynb  kfac_pinn_pkg_quickstart.ipynb  (+15 more)
style/: lint
(+165 files in other folders)
