[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bsde-dsge"
version = "0.0.1a0"
description = "Deep‑BSDE library for continuous‑time DSGE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "equinox>=0.11", "optax>=0.2"]
[project.optional-dependencies]
gpu = ["jax[cuda12_pip]"]
docs = ["myst-parser", "sphinx", "sphinx-autodoc-typehints"]
dev  = ["pytest", "ruff", "black", "mypy", "pre-commit"]
examples = ["dvc"]

[tool.hatch.build.targets.wheel]
packages = ["bsde_dsgE", "bsde_seed"]
