[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bsde-dsge"
version = "0.0.1a1"
description = "Deep‑BSDE library for continuous‑time DSGE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "equinox>=0.11", "optax>=0.2", "scipy"]
[project.optional-dependencies]
gpu = ["jax[cuda12_pip]"]
docs = [
  "myst-parser",
  "sphinx",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "jupyter",
]
dev  = ["pytest", "ruff", "black", "mypy", "pre-commit", "jupyterlab"]
examples = ["dvc"]

[project.scripts]
pinn-demo = "bsde_dsgE.cli:pinn_demo"

[tool.hatch.build.targets.wheel]
packages = ["bsde_dsgE"]

[tool.ruff]
src = ["bsde_dsgE"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = "bsde_dsgE"
