[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bsde-dsge"
version = "0.0.1a1"
description = "Deep‑BSDE library for continuous‑time DSGE"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["jax>=0.4", "equinox>=0.11", "optax>=0.2", "scipy"]
[project.optional-dependencies]
gpu = ["jax[cuda12_pip]"]
docs = [
  "myst-parser",
  "sphinx",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "jupyter",
]
dev  = ["pytest", "ruff", "black", "mypy", "pre-commit", "jupyterlab"]

[project.scripts]
pinn-demo = "bsde_dsgE.cli:pinn_demo"
pinn-poisson2d = "bsde_dsgE.cli:pinn_poisson2d"

[tool.hatch.build.targets.wheel]
packages = ["bsde_dsgE"]

